plugins/kotlin/idea/tests/testData/multiplatform/aliasesTypeMismatch/jvmLibrary/bindings.kt
actual typealias <!LINE_MARKER("descr='Has expects in commonLibrary module'")!>MyException<!> = platform.lib.MyException

actual typealias <!LINE_MARKER("descr='Has expects in commonLibrary module'")!>MyIllegalStateException<!> = platform.lib.MyIllegalStateException
